# medical_segmentation_decathlon

./: .gitignore  config.toml  config.yaml  pyproject.toml  train.py
datasets/: __init__.py  heart.py  transforms.py
modules/: __init__.py  unet.py
utils/: to_obj.py
