[project]
name = "medical-segmentation-decathlon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.5.0.post0",
    "monai[ignite,nibabel,tqdm]>=1.4.0",
    "opencv-python>=4.11.0.86",
    "ruff>=0.9.3",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.2.2",
    "toml>=0.10.2",
    "trimesh>=4.6.0",
    "wandb>=0.19.4",
]
